tests/snapshots/alignment_enum/output.snap
---
source: tests/runner.rs
description: top-type-sizes
---
8 std::ptr::alignment::AlignmentEnum64 align=8
      8 <discriminant>
      0 variant _Align1Shl0, _Align1Shl1, _Align1Shl2, _Align1Shl3, _Align1Shl4, _Align1Shl5, _Align1Shl6, _Align1Shl7, _Align1Shl8, _Align1Shl9, _Align1Shl10, _Align1Shl11, _Align1Shl12, _Align1Shl13, _Align1Shl14, _Align1Shl15, _Align1Shl16, _Align1Shl17, _Align1Shl18, _Align1Shl19, _Align1Shl20, _Align1Shl21, _Align1Shl22, _Align1Shl23, _Align1Shl24, _Align1Shl25, _Align1Shl26, _Align1Shl27, _Align1Shl28, _Align1Shl29, _Align1Shl30, _Align1Shl31, _Align1Shl32, _Align1Shl33, _Align1Shl34, _Align1Shl35, _Align1Shl36, _Align1Shl37, _Align1Shl38, _Align1Shl39, _Align1Shl40, _Align1Shl41, _Align1Shl42, _Align1Shl43, _Align1Shl44, _Align1Shl45, _Align1Shl46, _Align1Shl47, _Align1Shl48, _Align1Shl49, _Align1Shl50, _Align1Shl51, _Align1Shl52, _Align1Shl53, _Align1Shl54, _Align1Shl55, _Align1Shl56, _Align1Shl57, _Align1Shl58, _Align1Shl59, _Align1Shl60, _Align1Shl61, _Align1Shl62, _Align1Shl63
