tests/snapshots/alignment_enum/types.snap
---
source: tests/runner.rs
description: internal representation
---
- name: "std::ptr::alignment::AlignmentEnum64"
  size: 8
  align: 8
  kind:
    Enum:
      discriminant_size: 8
      variants:
        - name: _Align1Shl0
          size: 0
        - name: _Align1Shl1
          size: 0
        - name: _Align1Shl2
          size: 0
        - name: _Align1Shl3
          size: 0
        - name: _Align1Shl4
          size: 0
        - name: _Align1Shl5
          size: 0
        - name: _Align1Shl6
          size: 0
        - name: _Align1Shl7
          size: 0
        - name: _Align1Shl8
          size: 0
        - name: _Align1Shl9
          size: 0
        - name: _Align1Shl10
          size: 0
        - name: _Align1Shl11
          size: 0
        - name: _Align1Shl12
          size: 0
        - name: _Align1Shl13
          size: 0
        - name: _Align1Shl14
          size: 0
        - name: _Align1Shl15
          size: 0
        - name: _Align1Shl16
          size: 0
        - name: _Align1Shl17
          size: 0
        - name: _Align1Shl18
          size: 0
        - name: _Align1Shl19
          size: 0
        - name: _Align1Shl20
          size: 0
        - name: _Align1Shl21
          size: 0
        - name: _Align1Shl22
          size: 0
        - name: _Align1Shl23
          size: 0
        - name: _Align1Shl24
          size: 0
        - name: _Align1Shl25
          size: 0
        - name: _Align1Shl26
          size: 0
        - name: _Align1Shl27
          size: 0
        - name: _Align1Shl28
          size: 0
        - name: _Align1Shl29
          size: 0
        - name: _Align1Shl30
          size: 0
        - name: _Align1Shl31
          size: 0
        - name: _Align1Shl32
          size: 0
        - name: _Align1Shl33
          size: 0
        - name: _Align1Shl34
          size: 0
        - name: _Align1Shl35
          size: 0
        - name: _Align1Shl36
          size: 0
        - name: _Align1Shl37
          size: 0
        - name: _Align1Shl38
          size: 0
        - name: _Align1Shl39
          size: 0
        - name: _Align1Shl40
          size: 0
        - name: _Align1Shl41
          size: 0
        - name: _Align1Shl42
          size: 0
        - name: _Align1Shl43
          size: 0
        - name: _Align1Shl44
          size: 0
        - name: _Align1Shl45
          size: 0
        - name: _Align1Shl46
          size: 0
        - name: _Align1Shl47
          size: 0
        - name: _Align1Shl48
          size: 0
        - name: _Align1Shl49
          size: 0
        - name: _Align1Shl50
          size: 0
        - name: _Align1Shl51
          size: 0
        - name: _Align1Shl52
          size: 0
        - name: _Align1Shl53
          size: 0
        - name: _Align1Shl54
          size: 0
        - name: _Align1Shl55
          size: 0
        - name: _Align1Shl56
          size: 0
        - name: _Align1Shl57
          size: 0
        - name: _Align1Shl58
          size: 0
        - name: _Align1Shl59
          size: 0
        - name: _Align1Shl60
          size: 0
        - name: _Align1Shl61
          size: 0
        - name: _Align1Shl62
          size: 0
        - name: _Align1Shl63
          size: 0
